team13project/src/main.css
/* ... */
#overview .content {
    position: relative;
    z-index: 2; /* Ensure content is above the overlay */
    color: white; /* Change text color for better contrast */
    padding: 20px; /* Add padding for better spacing */
}

#intro .content {
    margin-top: 0%;
}

#intro {
    background: url("images/Overview.jpg") no-repeat center center / cover, 
                url("images/intro.jpg") no-repeat center center / cover;
    background-attachment: fixed;
}

/* One */

	

	#one {
		background: url("images/Reference.jpg") no-repeat center center / cover, 
                url("images/intro.jpg") no-repeat center center / cover;
    background-attachment: fixed;
	}

/* conclusion */
	#conclusion {
	background: url("images/conclusion.jpg") no-repeat center center / cover, 
			url("images/intro.jpg") no-repeat center center / cover;
	background-attachment: fixed;
	}

	#conclusion .content {
		position: relative;
		z-index: 2; /* Ensure content is above the overlay */
		color: white; /* Change text color for better contrast */
		padding: 200px; /* Add padding for better spacing */
		width: 100%;
		
	}

	#conclusion .button{
		z-index: 8;
	}

	

/* Two */

	#two {
		background: url("images/Findings.jpg") no-repeat center center / cover, 
                url("images/intro.jpg") no-repeat center center / cover;
    background-attachment: fixed;
	}

	#work {
		background: url("images/Taxonomy.png") no-repeat center center / cover, 
                url("images/intro.jpg") no-repeat center center / cover;
    background-attachment: fixed;
	}

	#contact {
		background: url("images/Team.jpg") no-repeat center center / cover, 
                url("images/intro.jpg") no-repeat center center / cover;
    background-attachment: fixed;

	}

	#work .content {
		background-color: white;
		margin-top: 10%;
		margin-bottom: 10%;
		width: 100%;
		border: 2px solid black;
		padding: 20px;
	}

	#contact .content {
		background-color: white;
		width: 100%;
		height: 100%;
		border: 2px solid black;
		padding: 20px;
		margin-bottom: 15%;
		margin-top: 15%;

	}


	#two .content {
		/* position: relative; */
		z-index: 2; /* Ensure content is above the overlay */
		color: black; /* Change text color for better contrast */
		margin-top: 15%;
		margin-bottom: 15%;
		width: 100%;
		
	}
	
	#two .content p{
		padding: 20px;
	}

	table {
		width: 100%;
		border-collapse: collapse;
	}
	
	th, td {
		padding: 10px;
		border: 1px solid #ddd;
		max-width: 200px; /* Example max-width */
		word-wrap: break-word; /* Break long words */
	}
	
	@media (max-width: 1200px) and (min-width: 700px ){
		th, td {
			font-size: 0.4em; /* Smaller text on small screens */
		}
		#work #needbigscreen {
			visibility: visible !important; 
		}
	}

	@media (max-width: 700px) and (min-width: 520px) {
		th, td {
			font-size: 0.2em; /* Smaller text on small screens */
		}
		#work #needbigscreen {
			visibility: visible !important; 
		}
		
	}


	@media (max-width: 520px) {
		th, td {
			font-size: 0em; /* Smaller text on small screens */
		}
		#work #needbigscreen {
			visibility: visible !important; 
			
		}
		#work #needbigscreen h1:before{
			text-indent:0;
			content:'Table content cannot be shown in this resolution (Need Big Screen Device)';
			float: left;
		}
		table {
			visibility: hidden;
			margin: 0;
			padding: 0;
			height: 0;
			width: 0;
			position: absolute;
		}
		#work #needbigscreen h1 {
			text-indent:-9999px;
		  }

		
	}
	
	#two .content h2{
		text-align: center;
	}

	#one .content {
		position: relative;
		z-index: 2; /* Ensure content is above the overlay */
		color: black; /* Change text color for better contrast */
		margin-top: 15%;
		margin-bottom: 15%;
		width: 100%;
	}

	
	
	#one .content p{
		padding: 20px;
	}
	
	#one .content h2{
		text-align: center;
	}

	#work .content {
		position: relative;
		z-index: 2; /* Ensure content is above the overlay */
		color: black; /* Change text color for better contrast */
		margin-top: 15%;
		margin-bottom: 15%;
	}
	
	#work .content p{
		padding: 20px;
	}
	
	#work .content h2{
		text-align: center;
	}

	#work .button {
		z-index: 2;
	}
	
	#one .button {
		z-index: 2;
	}
	#two .button {
		z-index: 2;
	}
	

	#contact .content {
		position: relative;
		z-index: 2; /* Ensure content is above the overlay */
		color: black; /* Change text color for better contrast */
		margin-top: 10%;
		margin-bottom: 10%;
	}
	#conclusion .button.style2{
		border-color: #000000;
		background-color: rgb(40, 148, 167);
		background-image: url("images/dark-arrow.svg");
	}

	#conclusion .button.style2:hover{
		
		background-color: inherit;
		background-image: url("images/arrow.svg");
		
	}
	

	#conclusion .content {
		position: relative;
		z-index: 2; /* Ensure content is above the overlay */
		color: black; /* Change text color for better contrast */
		margin-top: 15%;
		margin-bottom: 15%;
	}
	
	#contact .content p{
		padding: 20px;
	}
	
	#contact .content h2{
		text-align: center;
	}

	#contact .button {
		z-index: 2;
	}

/* Contact */

	#contact {
		overflow: hidden;
		padding-bottom: 0;
	}

		#contact .box {
			-moz-transition: -moz-transform 1s ease;
			-webkit-transition: -webkit-transform 1s ease;
			-ms-transition: -ms-transform 1s ease;
			transition: transform 1s ease;
			-moz-transform: translateY(0);
			-webkit-transform: translateY(0);
			-ms-transform: translateY(0);
			transform: translateY(0);
			position: relative;
		}

		#contact.inactive .box {
			-moz-transform: translateY(100%);
			-webkit-transform: translateY(100%);
			-ms-transform: translateY(100%);
			transform: translateY(100%);
		}

		@media screen and (max-width: 736px) {

			#contact .box {
				padding: 1.5em 1.5em 2em 1.5em;
			}

		}

		@media screen and (max-width: 480px) {

			#contact .box {
				padding: 1em 1em 2em 1em;
			}

		}
        .developer-cards {
            display: flex;
            justify-content: space-around;
            flex-wrap: wrap;
			
        }
/* ... */

